# carto-flow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmarks.yml  bump-version.yml  deploy-docs.yml  main.yml  on-release-main.yml  pypi-publish.yml  release.yml
benchmarks/: conftest.py  test_flow_cartogram.py
docs/: index.md
docs/examples/: README.md  plot_dot_density_cartogram.py  plot_flow_cartogram.py  plot_proportional_cartogram.py  plot_symbol_cartogram.py  plot_voronoi_cartogram.py
docs/examples/flow_cartogram/: README.md  plot_flow_animation.py  plot_flow_animation_density.py  plot_flow_animation_velocity.py  plot_flow_convergence.py  plot_flow_population_evolution.py
docs/examples/proportional_cartogram/: README.md  plot_proportional.py
docs/examples/symbol_cartogram/: README.md  plot_symbol_centroid_layout.py  plot_symbol_circle_packing_adjacency.py  plot_symbol_circle_packing_adjacency_heatmap.py  plot_symbol_circle_packing_displacement.py  plot_symbol_circle_packing_layout.py  plot_symbol_plot_tiling.py  plot_symbol_plot_tiling_2.py  plot_symbol_styling.py  plot_symbol_tiling_presets.py
docs/examples/voronoi_cartogram/: README.md  plot_voronoi_custom_boundary.py  plot_voronoi_districts.py  plot_voronoi_elastic_boundary.py
docs/explanations/: benchmark_results.json  flow-cartogram-algorithm.md  flow-cartogram-history.md  flow-cartogram-workflow.md  index.md  performance.ipynb  proportional-cartogram.md  symbol-cartogram-circle-packing.md  symbol-cartogram-grid-layout.md  symbol-cartogram-pipeline.md  tiling-system.md  voronoi-cartogram-algorithm.md  voronoi-cartogram-contiguity.md  voronoi-cartogram-geodesic-labeling.md
docs/hooks/: remove_hidden_toc.py
docs/how-to/: co-morph-landmarks-and-coordinates.ipynb  diagnose-convergence.ipynb  index.md  partitions-on-flow-cartogram.ipynb  reduce-boundary-distortion.ipynb  save-and-export-results.ipynb  style-symbols-by-category.ipynb
docs/how-to/voronoi_cartogram/: boundaries.ipynb  choose-backend.ipynb  coastal-regions.ipynb  inspect-convergence.ipynb  topology.ipynb
docs/overrides/: main.html
docs/reference/: index.md
docs/reference/data/: api.md  index.md
docs/reference/flow_cartogram/: algorithm.md  animation.md  anisotropy.md  api.md  cartogram.md  comparison.md  density.md  displacement.md  errors.md  grid.md  history.md  index.md  metrics.md  options.md  serialization.md  velocity.md  visualization.md  workflow.md
docs/reference/geo_utils/: geo_utils.md  index.md
docs/reference/proportional_cartogram/: dot_density.md  index.md  partition.md  shrinking.md  splitting.md  visualization.md
docs/reference/symbol_cartogram/: api.md  index.md  layout.md  layout_result.md  options.md  placement.md  presets.md  result.md  styling.md  symbols.md  tiling.md  visualization.md
docs/reference/voronoi_cartogram/: animation.md  api.md  backends.md  contiguity.md  field.md  geodesic.md  history.md  index.md  options.md  result.md  visualization.md
docs/stylesheets/: jupyter.css
docs/tutorials/: basic-flow-cartogram.ipynb  basic-proportional-cartogram.ipynb  basic-symbol-cartogram.ipynb  basic-voronoi-cartogram.ipynb  index.md  multiresolution-flow-cartogram.ipynb
scripts/: bump_version.py  download_state_population.py
src/carto_flow/: __init__.py  _benchmark.py  _history.py
src/carto_flow/data/: __init__.py  us_state_population.csv
src/carto_flow/flow_cartogram/: __init__.py  algorithm.py  animation.py  anisotropy.py  api.py  (+16 more)
tests/: test_voronoi_cartogram.py
(+62 files in other folders)
