[project]
name = "carto-flow"
version = "0.0.1"
description = "This is a library for creating cartographs."
authors = [{ name = "FKloosterman", email = "devfakl@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "geopandas>=1.0.1",
    "joblib>=1.5.2",
    "matplotlib>=3.9.4",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.0.0",
    "pyfftw>=0.14.0",
    "scipy>=1.13.1",
    "shapely>=2.1.0",
    "tactile>=0.1.0",
    "tqdm>=4.67.1",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
data = ["censusdis>=1.2.4"]

[project.urls]
Homepage = "https://fkloosterman.github.io/carto-flow/"
Repository = "https://github.com/fkloosterman/carto-flow"
Documentation = "https://fkloosterman.github.io/carto-flow/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "jupyterlab>=4.4.9",
    "ipykernel>=6.30.1",
    "mkdocs-jupyter>=0.25.1",
    "censusdis>=1.2.4",
    "mkdocs-gallery>=0.10.4",
]
data = [
    "censusdis>=1.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carto_flow"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "numba.*",
    "pyfftw.*",
    "censusdis.*",
    "joblib.*",
    "scipy.*",
    "shapely.*",
    "geopandas.*",
    "pandas.*",
    "tqdm.*",
    "tactile.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["carto_flow.*"]
disallow_any_unimported = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["carto_flow.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Abstract raise to an inner function
    "TRY301",
    # Function complexity - allow complex functions for algorithm code
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
